--- a/src/app/rental/rental-manage/rental-manage-schedule/rental-manage-schedule.component.html
+++ b/src/app/rental/rental-manage/rental-manage-schedule/rental-manage-schedule.component.html
@@ -1,6 +1,14 @@
 <div class="wrapper" *ngIf="rental">
-    <div class="page-header page-header-xs settings-background" style="background-image: url('./assets/img/joshua-earlez.jpg')">
+    <div class="page-header page-header-xs settings-background" [ngStyle]="{'background-image' : 'url(' + rental.image + ')' }">
         <div class="filter"></div>
+        <div class="container">
+            <div class="space-50"></div>
+            <div class="motto text-center">
+                <h1>Manage Schedule</h1>
+                <h3>You can manage rental's schedule here.</h3>
+                <br />
+            </div>
+        </div>
     </div>
     <div class="profile-content section">
         <div class="container">
@@ -11,35 +19,26 @@
             </div> -->
             <div class="project-pills">
                 <ngb-tabset [justify]="'center'" type="pills" class="nav-pills nav-pills-primary justify-content-center">
-                    <ngb-tab title="Spot Schedule">
+                    <ngb-tab title="Spot Block">
                         <ng-template ngbTabContent>
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="space-top"></div>
-                                    <h5 class="description text-center">日ごとに受付時間を設定できます.</h5>
+                                    <h5 class="description text-center">受付ブロック日を設定できます.</h5>
+                                    <h5 class="description text-center">長押しドラッグ選択で複数日をまとめてブロックできます.</h5>
                                     <div class="space-top"></div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-10 ml-auto mr-auto">
-                                    <full-calendar defaultView="dayGridMonth" 
+                                    <full-calendar #calendar
+                                                    defaultView="dayGridMonth" 
                                                     [plugins]="calendarPlugins" 
-                                                    [allDaySlot]="false"
                                                     [selectable]="true"
-                                                    [events]="[
-                                                                {
-                                                                    daysOfWeek: [ 1, 2, 3 ],
-                                                                    startTime: '08:00',
-                                                                    endTime: '18:00'
-                                                                },
-                                                                {
-                                                                    daysOfWeek: [ 4, 5 ],
-                                                                    startTime: '10:00',
-                                                                    endTime: '16:00'
-                                                                }
-                                                            ]"
-                                                    (dayRender)="dayRender($event,el)"
-                                                    (dateClick)="handleDateClick($event)"
+                                                    [longPressDelay]="500"
+                                                    [events]="calendarEvents"
+                                                    (select)="handleDragSelect($event)"
+                                                    (eventClick)="handleEventClick($event)"
                                                     ></full-calendar>
                                 </div>
                             </div>
@@ -50,7 +49,8 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="space-top"></div>
-                                    <h5 class="description text-center">曜日ごとに受付時間を設定できます.</h5>
+                                    <h5 class="description text-center">曜日毎に定例受付時間を設定できます.</h5>
+                                    <h5 class="description text-center">OFFにしてもそれまでの予約情報は保護されます.</h5>
                                     <div class="space-top"></div>
                                 </div>
                             </div>
