--- a/src/assets/sass/paper-kit/_variables.scss
+++ b/src/assets/sass/paper-kit/_variables.scss
@@ -53,6 +53,9 @@ $warning-states-color:       darken($warning-color, 10%) !default;
 $danger-color:               #f5593d !default;
 $danger-states-color:        darken($danger-color, 8%) !default;
 
+$gray-color:                 #DDDDDD !default;
+$gray-states-color:          darken($gray-color, 8%) !default;
+
 $link-disabled-color:        #666666 !default;
 
 $purple-color:               #c178c1 !default;
