--- a/src/assets/sass/paper-kit/_buttons.scss
+++ b/src/assets/sass/paper-kit/_buttons.scss
@@ -73,6 +73,7 @@
 .btn-warning { @include btn-styles($warning-color, $warning-states-color); }
 .btn-danger  { @include btn-styles($danger-color, $danger-states-color); }
 .btn-neutral  { @include btn-styles($white-color, $default-states-color); }
+.btn-gray  { @include btn-styles($gray-color, $gray-states-color); }
 
 .btn-outline-default { @include btn-outline-styles($default-color, $default-states-color); }
 .btn-outline-primary { @include btn-outline-styles($primary-color, $primary-states-color); }
