improve rental detail calendar

--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -295,8 +295,8 @@
                                         [plugins]="calendarPlugins" 
                                         [allDaySlot]="false"
                                         [nowIndicator]="true"
-                                        [events]="initEvents()"
-                                        [businessHours]="initBusinessHours()"
+                                        [events]="calendarEvents"
+                                        [businessHours]="calendarBusinessHours"
                                         ></full-calendar>
                     </div>
                 </div>
