--- a/src/app/rental/rental-manage/rental-manage-schedule/rental-manage-schedule.component.html
+++ b/src/app/rental/rental-manage/rental-manage-schedule/rental-manage-schedule.component.html
@@ -35,8 +35,9 @@
                                                     defaultView="dayGridMonth" 
                                                     [plugins]="calendarPlugins" 
                                                     [selectable]="true"
-                                                    [longPressDelay]="500"
+                                                    [longPressDelay]="300"
                                                     [events]="calendarEvents"
+                                                    (dateClick)="handleDateClick($event)"
                                                     (select)="handleDragSelect($event)"
                                                     (eventClick)="handleEventClick($event)"
                                                     ></full-calendar>
