--- a/src/app/rental/rental-manage/rental-manage.component.html
+++ b/src/app/rental/rental-manage/rental-manage.component.html
@@ -27,7 +27,7 @@
                   <label class="label label-warning">{{rental.province}}</label>
                   <h5 class="card-title">{{rental.rentalname}} Trainer</h5>
                   <div class="card-description">
-                    <p><button class="btn btn-wd btn-info btn-round" routerLink="/rentals/{{rental._id}}/editschedule">Schedule</button></p>
+                    <p><button class="btn btn-info btn-round" routerLink="/rentals/{{rental._id}}/editschedule">Schedule</button></p>
                     <!-- <p><button class="btn btn-sm btn-wd btn-info btn-round">Edit Profile</button></p> -->
                     <!-- <p><button class="btn btn-sm btn-wd btn-danger btn-round">Delete</button></p> -->
                     <!-- <hr> -->
