Canged navbar icon

--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -55,9 +55,9 @@
                         <div ngbDropdown class="nav-item clickable dropdown">
                             <div class="nav-link dropdown-toggle" ngbDropdownToggle><i class="nc-icon nc-single-02"></i>&nbsp; オーナー機能</div>
                             <div ngbDropdownMenu class="dropdown-menu dropdown-menu-right dropdown-danger">
-                                <a class="dropdown-item" [routerLink]="['/rentals/requests']"><i class="nc-icon nc-bullet-list-67"></i>&nbsp; 予約リクエスト管理</a>
-                                <a class="dropdown-item" [routerLink]="['/rentals/manage']"><i class="nc-icon nc-settings-gear-65"></i>&nbsp; 商品管理</a>
-                                <!-- <a class="dropdown-item" [routerLink]="['/manage/report-owner']"><i class="nc-icon nc-settings-gear-65"></i>&nbsp; 収益レポート</a> -->
+                                <a class="dropdown-item" [routerLink]="['/rentals/requests']"><i class="nc-icon nc-bell-55"></i>&nbsp; 予約リクエスト管理</a>
+                                <a class="dropdown-item" [routerLink]="['/rentals/manage']"><i class="nc-icon nc-bullet-list-67"></i>&nbsp; 商品管理</a>
+                                <!-- <a class="dropdown-item" [routerLink]="['/manage/report-owner']"><i class="nc-icon nc-chart-bar-32"></i>&nbsp; 収益レポート</a> -->
                                 <!-- <a class="dropdown-item" [routerLink]="['/rentals/new']"><i class="nc-icon nc-settings-gear-65"></i>&nbsp; 物件の追加</a> -->
                             </div>
                         </div>
