Apply Facebook login

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -9,7 +9,7 @@
                 <div class="card card-register">
                   <h3 class="title">Login with</h3>
                   <div class="social-line text-center">
-                    <button class="btn btn-neutral btn-facebook btn-just-icon" (click)="FBLogin()">
+                    <button class="btn btn-neutral btn-facebook btn-just-icon" (click)="signInWithFB()">
                       <i class="fa fa-facebook-square"></i>
                     </button>
                     <!-- <a href="#pablo" class="btn btn-neutral btn-google btn-just-icon">
@@ -73,7 +73,7 @@
               </div>
             </div>
             <div class="footer register-footer text-center">
-              <h6>&copy;{{test | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> Anytime Personal Trainer.inc</h6>
+              <h6>&copy;{{footer | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> Anytime Personal Trainer.inc</h6>
             </div>
           </div>
         </div>
