--- a/src/app/auth/login/login-resetpassword/login-newpassword/login-newpassword.component.html
+++ b/src/app/auth/login/login-resetpassword/login-newpassword/login-newpassword.component.html
@@ -52,7 +52,7 @@
             </div>
           </div>
           <div class="footer register-footer text-center">
-            <h6>&copy;{{test | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> Anytime Personal Trainer.inc</h6>
+            <h6>&copy;{{footer | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> Anytime Personal Trainer.inc</h6>
           </div>
         </div>
       </div>
