--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
         </div>
         <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
         <h6 class="category-absolute ml-auto mr-auto">
-            &copy;{{test | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> Anytime Personal Trainer.inc
+            &copy;{{footer | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> Anytime Personal Trainer.inc
         </h6>
     </div>
     
@@ -135,8 +135,8 @@
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mr-auto ml-auto">
                         <div class="card card-register">
-                            <h3 *ngIf="isFBbuttonClicked" class="title">Register with Facebook</h3>
-                            <ng-container *ngIf="!isFBbuttonClicked">
+                            <h3 *ngIf="isFBloggedIn" class="title">Registering with Facebook</h3>
+                            <ng-container *ngIf="!isFBloggedIn">
                                 <h3 class="title">Register</h3>
                                 <div class="social-line text-center">
                                     <button  class="btn btn-neutral btn-facebook btn-just-icon" (click)="FBregister()">
