--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -20,7 +20,7 @@
                     </a> -->
                   </div>
                   <br>
-                  <div *ngIf="isFBbuttonClicked && errors.length > 0" class="alert alert-danger">
+                  <div *ngIf="isFBloggedIn && errors.length > 0" class="alert alert-danger">
                     <p *ngFor="let error of errors">{{error.detail}}</p>
                   </div>
     
@@ -30,7 +30,7 @@
                       <div class="line r"></div>
                   </div>
     
-                  <div *ngIf="!isFBbuttonClicked && errors.length > 0" class="alert alert-danger">
+                  <div *ngIf="!isFBloggedIn && errors.length > 0" class="alert alert-danger">
                     <p *ngFor="let error of errors">{{error.detail}}</p>
                   </div>
                   <form class="register-form" [formGroup]="loginForm" (ngSubmit)="login()">
