--- a/src/assets/sass/paper-kit/_info-areas.scss
+++ b/src/assets/sass/paper-kit/_info-areas.scss
@@ -37,6 +37,11 @@
             width: 48px;
         }
     }
+    h2,
+    .h2{
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
     h4,
     .h4{
         margin-top: 15px;
