--- a/src/app/auth/register/register-verification/register-verification.component.html
+++ b/src/app/auth/register/register-verification/register-verification.component.html
@@ -5,7 +5,7 @@
       <div class="container">
           <div class="motto text-center">
               <h1>Activattion Success!</h1>
-              <h3>Congratuations! You can login from now.</h3>  
+              <h3>おめでとうございます！ログインできるようになりました！</h3>  
           </div>
       </div>
   </div>
