--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -4,7 +4,9 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6 col-12 ml-auto mr-auto">
                     <div class="logo-footer">
-                        <img src="assets/img/anytime-pt-logo2b.png" alt="">
+                        <a routerLink="/">
+                            <img src="assets/img/anytime-pt-logo2b.png" alt="">
+                        </a>
                     </div>
                      <!-- <div class="form-group">
                         <angular2-multiselect [data]="dropdownList" [(ngModel)]="selectedItems"
@@ -31,7 +33,7 @@
                             <div class="links">
                                 <ul class="uppercase-links stacked-links">
                                     <li>
-                                        <a href="#" >
+                                        <a routerLink="/">
                                             Home
                                         </a>
                                     </li>
