--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -45,7 +45,15 @@
                 <div class="row">
                     <div class="col-md-8 mr-auto ml-auto">
                         <h2 class="title">Greeting</h2>
-                        <h5 class="description">これはサンプルテキストです。このページを見てくれているユーザーに簡単な挨拶をここでします。あなたのパーソナルレッスンを受けることで得られる価値をアピールできます。</h5>
+                        <h5 class="description">
+                                ドライブにお酒と美味しいもの <br>
+                                旅行や映画などが大好き(*´∇`)ﾉ✨<br>
+                                春は花見したり、ピクニックしたり<br>
+                                夏は海行ったりBBQしたり… <br>
+                                ディズニーとかスノボーとかも好き✨ <br><br>
+                                
+                                性格は明るくて元気！！ とにかく楽しい事が大好き✨
+                        </h5>
                         <br>
                         <button (click)="smoothScroll('detail-of-lessons')" class="btn btn-danger btn-round">See Details</button>
                     </div>
