Back texts to AnytimePersonalTrainer

--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -46,13 +46,7 @@
                     <div class="col-md-8 mr-auto ml-auto">
                         <h2 class="title">Greeting</h2>
                         <h5 class="description">
-                                ドライブにお酒と美味しいもの <br>
-                                旅行や映画などが大好き(*´∇`)ﾉ✨<br>
-                                春は花見したり、ピクニックしたり<br>
-                                夏は海行ったりBBQしたり… <br>
-                                ディズニーとかスノボーとかも好き✨ <br><br>
-                                
-                                性格は明るくて元気！！ とにかく楽しい事が大好き✨
+                            ここに簡単な自己紹介を書くことができます。サンプルテキスト　サンプルテキスト　サンプルテキスト　サンプルテキスト
                         </h5>
                         <br>
                         <button (click)="smoothScroll('detail-of-lessons')" class="btn btn-danger btn-round">See Details</button>
