--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -2,10 +2,10 @@
     <div class="container">
         <div class="navbar-translate">
             <ng-container *ngIf="auth.isAuthenticated()">
-                <a class="navbar-brand" routerLink="/rentals">mococo</a>
+                <a class="navbar-brand" routerLink="/rentals">AnytimePersonalTrainer</a>
             </ng-container>
             <ng-container *ngIf="!auth.isAuthenticated()">
-                <a class="navbar-brand" routerLink="/">mococo</a>
+                <a class="navbar-brand" routerLink="/">AnytimePersonalTrainer</a>
             </ng-container>
             <button class="navbar-toggler navbar-burger" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" (click)="sidebarToggle()">
                 <span class="navbar-toggler-bar"></span>
