--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
         </div>
         <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
         <h6 class="category-absolute ml-auto mr-auto">
-            &copy;{{footer | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> mococo.inc
+            &copy;{{footer | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> AnytimePersonalTrainer.inc
         </h6>
     </div>
     
