--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -328,5 +328,6 @@
         </div>
     </div>
 </div>
+<app-googlemaps [location]="rental.province + ', ' + rental.nearStation"></app-googlemaps>
 <app-bottom-navbar [rental]="rental"></app-bottom-navbar>
 </section>
