--- a/src/app/user/user-settings/user-settings.component.html
+++ b/src/app/user/user-settings/user-settings.component.html
@@ -11,10 +11,15 @@
             </div> -->
             <div class="row">
                 <div class="col-md-6 ml-auto mr-auto">
-                    <form class="settings-form" *ngIf="userData" #userForm="ngForm" (ngSubmit)="updateUser(userForm)">
+                    <form *ngIf="userData" class="settings-form" #userForm="ngForm" (ngSubmit)="updateUser(userForm)">
                         <div class="form-group">
                             <label>Your Name</label>
-                            <input type="text" class="form-control border-input" placeholder="Your Name" [(ngModel)]="userData.username" name="username" required>
+                            <input type="text" 
+                                class="form-control border-input" 
+                                placeholder="Your Name" 
+                                [(ngModel)]="userData.username" 
+                                name="username" 
+                                required >
                         </div>
                         <!-- <div class="form-group">
                             <label>Email Address</label>
@@ -29,12 +34,18 @@
                         </div>
                         <div class="form-group">
                             <input type="text" class="form-control border-input" placeholder="Confirm New Password">
-                        </div>
+                        </div>  -->
                         <div class="form-group">
-                            <label>Description</label>
-                                <textarea class="form-control textarea-limited" placeholder="Your trainer can see your description here. Let's introduse who you are." rows="3" maxlength="150" ></textarea>
+                            <label>Let's appeal to trainers!</label>
+                                <textarea type="text"
+                                        class="form-control textarea-limited" 
+                                        placeholder="Your trainer can see your description here. Let's introduse who you are." 
+                                        [(ngModel)]="userData.description" 
+                                        name="description"
+                                        rows="3" 
+                                        maxlength="150" ></textarea>
                                 <h5><small><span id="textarea-limited-message" class="pull-right">150 characters left</span></small></h5>
-                        </div> -->
+                        </div>
 
                         <label>Notifications</label>
                         <ul class="notifications">
