Apply line-works

--- a/src/app/user/user-mybookings/user-mybookings.component.html
+++ b/src/app/user/user-mybookings/user-mybookings.component.html
@@ -34,6 +34,11 @@
                 </a>
                 <!-- <hr> -->
                 <div class="card-footer">
+                  <a href="https://works.do/R/ti/p/ahamada321@aerume" target="_blank">
+                    <img src="./assets/img/icons/line-square-default.png" alt="LINEで待ち合わせ場所調整する">
+                    <div>待ち合わせ場所を調整する</div>
+                  </a>
+                  <br>
                   <button *ngIf="!isExpired(booking.startAt)" class="btn btn-danger" (click)="deleteConfirmation(booking._id); bookingDeleteIndex = i">予約をキャンセルする</button>
                   <!-- <button *ngIf="isExpired(booking.startAt)" class="btn btn-danger" (click)="deleteConfirmation(booking._id); bookingDeleteIndex = i">レビューする</button> -->
                   <app-review *ngIf="!booking.review && isExpired(booking.startAt)" [bookingId]="booking._id" (reviewSubmitted)="reviewHandler($event, i)"></app-review>  
