--- a/src/app/user/user-settings/user-settings.component.html
+++ b/src/app/user/user-settings/user-settings.component.html
@@ -47,6 +47,11 @@
                                 <h5><small><span id="textarea-limited-message" class="pull-right">150 characters left</span></small></h5>
                         </div>
 
+                        <!-- <div class="form-group">
+                            <label>User can meet you in</label>
+                            <input type="text" class="form-control border-input" placeholder="あなたと会える場所" [ngModel]="userData.nearStation" name="nearStation" required>
+                        </div> -->
+
                         <label>Notifications</label>
                         <ul class="notifications">
                             <!-- <li class="notification-item">
