--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -26,7 +26,7 @@
                             <div class="container">
                                 <div class="space-110"></div>
                                 <div class="row">
-                                    <div class="col-md-8 ml-auto mr-auto text-center motto">
+                                    <div class="col-md-8 text-left motto">
                                         <h1 class="title">{{ rental.rentalname }} Trainer</h1>
                                         <h5>{{ rental.headlinedescription2 }}</h5>
                                     </div>
@@ -46,7 +46,7 @@
                     <div class="col-md-8 mr-auto ml-auto">
                         <h2 class="title">Greeting</h2>
                         <h5 class="description">
-                            ここに簡単な自己紹介を書くことができます。サンプルテキスト　サンプルテキスト　サンプルテキスト　サンプルテキスト
+                            {{ rental.description }}
                         </h5>
                         <br>
                         <button (click)="smoothScroll('detail-of-lessons')" class="btn btn-danger btn-round">See Details</button>
@@ -105,17 +105,17 @@
                             <div class="row">
                                 <div class="col-md-5">
                                     <div class="card-image">
-                                        <img class="img" src="assets/img/gallery-sample/training1.jpg" />
+                                        <img class="img" src="{{ rental.course60img }}" />
                                     </div>
                                 </div>
                                 <div class="col-md-7">
                                     <div class="card-body">
-                                        <h6 class="card-category text-info">Enterprise</h6>
+                                        <h6 class="card-category text-info">Entry course</h6>
                                         <h3 class="card-title">
-                                            <a href="#pablo">The four waves of augmented reality</a>
+                                            60min Course
                                         </h3>
                                         <p class="card-description">
-                                            自慢の60minレッスンの具体的な内容をここで紹介できます。サンプル文章　サンプル文章　サンプル文章　サンプル文章　サンプル文章　サンプル文章　サンプル文章
+                                            {{ rental.course60Description }}
                                         </p>
                                         <!-- <p class="author">
                                             by <a href="#pablo"><b>Tim Merel</b></a>, 11 hours ago
@@ -134,10 +134,10 @@
                                             <i class="fa fa-free-code-camp" aria-hidden="true"></i> Trending
                                         </h6>
                                         <h3 class="card-title">
-                                            <a href="#pablo">Okoli connects you with tour guides around the world</a>
+                                            90min Course
                                         </h3>
                                         <p class="card-description">
-                                            自慢の90minレッスンの具体的な内容をここで紹介できます。サンプル文章　サンプル文章　サンプル文章　サンプル文章　サンプル文章　サンプル文章　サンプル文章
+                                            {{ rental.course90Description }}
                                         </p>
                                         <!-- <p class="author">
                                             by <a href="#pablo"><b>John Biggs</b></a>, 3 seconds ago
@@ -146,7 +146,7 @@
                                 </div>
                                 <div class="col-md-5">
                                     <div class="card-image">
-                                        <img class="img" src="assets/img/gallery-sample/training2.jpg" />
+                                        <img class="img" src="{{ rental.course90img }}" />
                                     </div>
                                 </div>
                             </div>
