--- a/src/app/rental/rental-list/rental-list-item/rental-list-item.component.html
+++ b/src/app/rental/rental-list/rental-list-item/rental-list-item.component.html
@@ -6,7 +6,7 @@
     <div class="card-body">
       <label class="label label-warning">{{ rental.province }}</label>
       <h5 class="card-title">{{ rental.rentalname }} Trainer</h5>
-      <div class="card-description">{{rental.description}}</div>
+      <div class="card-description">{{ rental.cardDescription }}</div>
       <hr />
       <div class="card-footer">
         <div class="author">
