ContactForm is not working yet

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -33,18 +33,18 @@
                             <div class="links">
                                 <ul class="uppercase-links stacked-links">
                                     <li>
-                                        <a routerLink="/">
-                                            Home
+                                        <a routerLink="#">
+                                            ご利用方法
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
-                                            Discover
+                                        <a routerLink="#">
+                                            お客様の声
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
-                                            Blog
+                                        <a routerLink="#">
+                                            メディア実績
                                         </a>
                                     </li>
                                 </ul>
@@ -54,18 +54,18 @@
                             <div class="links">
                                 <ul class="uppercase-links stacked-links">
                                     <li>
-                                        <a href="#">
-                                           Contact Us
+                                        <a routerLink="/faq">
+                                           よくある質問
                                         </a>
                                     </li>
                                     <li>
-                                        <a routerLink="/register">
-                                           Become Trainer
+                                        <a routerLink="/contactform">
+                                           お問い合わせ
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
-                                           About Us
+                                        <a routerLink="#">
+                                           パートナー募集
                                         </a>
                                     </li>
                                 </ul>
