--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -311,7 +311,7 @@
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto text-center">
                         <h2 class="title">Let's book</h2>
-                        <p class="description">Cause if you do, it can be yours for Free. Hit the button below and download it. Start a new project or give an old Bootstrap 4 project a new look.</p>
+                        <p class="description">スケジュールと場所を確認して、問題なければ予約リクエストページへ進みましょう。待ち合わせの詳細場所は、予約完了後にLINEで直接トレーナーと連絡しながら決められます。</p>
                         <br>
                         <a *ngIf="!isYourRental()" routerLink="booking" class="btn btn-danger btn-round btn-lg">Go to booking</a>
                         <button *ngIf="isYourRental()" 
