--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -33,17 +33,17 @@
                             <div class="links">
                                 <ul class="uppercase-links stacked-links">
                                     <li>
-                                        <a routerLink="#">
-                                            ご利用方法
+                                        <a routerLink="/userguide">
+                                            ご利用の流れ
                                         </a>
                                     </li>
                                     <li>
-                                        <a routerLink="#">
+                                        <a routerLink="/usersvoice">
                                             お客様の声
                                         </a>
                                     </li>
                                     <li>
-                                        <a routerLink="#">
+                                        <a routerLink="/results">
                                             メディア実績
                                         </a>
                                     </li>
@@ -64,7 +64,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a routerLink="#">
+                                        <a routerLink="/partnership">
                                            パートナー募集
                                         </a>
                                     </li>
