--- a/src/app/contactform/contactform.component.html
+++ b/src/app/contactform/contactform.component.html
@@ -5,7 +5,7 @@
             <div class="space-50"></div>
             <div class="motto text-center">
                 <h2>お問い合わせ</h2>
-                <h3>Let's ask questions or requests to us.</h3>
+                <h3>Let's ask questions or requests.</h3>
                 <br />
             </div>
         </div>
